welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: not found: value T
	for (n <- 0 to T.length-1)
                       ^